they be held accountable for the manner in which it is used.

 ====================================
|************ Change Log ************|
 ====================================
 - v0.7??- (??/??/2014) - BrawlLib v0.2??
	. Support adding new collision nodes to ARC via right click.
	. Support adding new BLOC to ARC via right click.
	. Support for item frequency nodes.
	. BrawlBox now displays redirected nodes with their own icon
	. Fixed setting redirect index.
	. Fixed embedded module files (common2 and common3) not parsing.
	. Fixed BBox crashing when no vertices exist in Target model.
	. Fixed bug where opening environment settings would radically enlarge various rendered items. (bone controls, overlays, etc.)
	. Changing tool via options->viewer->bone control or shortcuts E,R, and T now updates Tool dropdown and vice versa
	. Fixed alignment of the frame indicator with the mouse when dragging it in the interpolation editor


 - v0.73b- (8/14/2014) - BrawlLib v0.20b
	. Model previewer now has the abiility to render the stage boundries as well as respawn and spawn areas
	  . Spawn areas turn red when they're too far away from the floor
	. Added a "Zoom Extents" Button to the model previewer which will zoom the camera to the selected bone.
	. BLOC archives are now rebuildable
		.GSND files are now fully editable
	. Collisions are now color coded by type.
		. Floors = cyan
		. Ceilings = red
		. Walls = green
		. No type = white
		. Fallthrough platforms are rendered yellow.
		. Ledge grab collisions have their appropriate link rendered purple.
	. Update OpenTK library to latest stable release for optimizations
	. Module names internalized (rather then pulled from external text file) and shown in properties as ModuleName
	. BrawlBox icon replaced with 256x256 version

 - v0.73a- (6/28/2014) - BrawlLib v0.20a
	. Interpolation Editor changes (TheShyGuy)
		Display -> Linear -> Edit Values As Linear (toggle on/off)